many years of minor updates, plus an entirely new javascript-based full tournament predictor selection tool and much more

--- a/html/marchmadness.html
+++ b/html/marchmadness.html
@@ -3,7 +3,7 @@
     <title>march madness editors</title>
   </head>
   <body>
-    <p>admin tools:<br>
+    <p>
       <a href="/cgi-bin/marchmadness/tourneyedit.pl">tournament editor</a><br>
       <a href="/cgi-bin/marchmadness/divisionedit.pl">division editor</a><br>
       <a href="/cgi-bin/marchmadness/teamedit.pl">team editor</a><br>
@@ -11,14 +11,16 @@
       <a href="/cgi-bin/marchmadness/playeredit.pl">player editor</a><br>
       <a href="/cgi-bin/marchmadness/pickedit.pl">pick editor</a><br>
       <a href="marchmadness.sql">mysql tables</a><br>
-    </p>
-    <p>tourney setup tools:<br>
       <a href="/cgi-bin/marchmadness/newtourney.pl">new tournament</a><br>
       <a href="/cgi-bin/marchmadness/newpicks.pl">new picks</a><br>
+      <a href="/cgi-bin/marchmadness/newpicks2.pl">new picks v2</a><br>
+      <a href="/cgi-bin/marchmadness/newscore.pl">new score</a><br>
     </p>
-    <p>player tools:<br>
+    <p>
       <a href="/cgi-bin/marchmadness/display.pl">display standings</a><br>
       <a href="/cgi-bin/marchmadness/bracket.pl">display brackets</a><br>
+      <a href="/cgi-bin/marchmadness/team.pl">team info</a><br>
+      <a href="/cgi-bin/marchmadness/currentscores.pl">current scores</a><br>
     </p>
   </body>
 </html>
